--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "cors": "^2.8.4",
     "expo": "^21.0.0",
+    "mobx": "^3.3.3",
+    "mobx-react": "^4.3.5",
     "mysql": "^2.15.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
