--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -24,9 +24,9 @@
     "mobx": "^3.3.3",
     "mobx-react": "^4.3.5",
     "mysql": "^2.15.0",
-    "react": "16.0.0-alpha.12",
+    "react": "^16.0.0-alpha.12",
+    "react-dom": "^16.2.0",
     "react-native": "^0.48.4",
-    "react-native-i18n": "^2.0.9",
     "react-navigation": "^1.0.0-beta.21",
     "util": "*"
   }
