--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -27,6 +27,8 @@
     "react": "^16.0.0-alpha.12",
     "react-dom": "^16.2.0",
     "react-native": "^0.48.4",
+    "react-native-elements": "^0.18.5",
+    "react-native-vector-icons": "^4.4.3",
     "react-navigation": "^1.0.0-beta.21",
     "util": "*"
   }
