--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -27,7 +27,12 @@
     "react": "^16.0.0-alpha.12",
     "react-dom": "^16.2.0",
     "react-native": "^0.48.4",
+    "react-native-i18n": "^2.0.10",
     "react-navigation": "^1.0.0-beta.21",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
     "util": "*"
   }
 }
