--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -25,7 +25,7 @@
     "mobx": "^3.3.3",
     "mobx-react": "^4.3.5",
     "mysql": "^2.15.0",
-    "react": "^16.2.0",
+    "react": "^16.0.0-alpha.12",
     "react-dom": "^16.2.0",
     "react-native": "^0.48.4",
     "react-native-elements": "^0.18.5",
