--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -31,6 +31,7 @@
     "react-native-elements": "^0.18.5",
     "react-native-i18n": "^2.0.10",
     "react-native-multiple-select": "^0.3.0",
+    "react-native-select-multiple": "^1.2.0",
     "react-native-vector-icons": "^4.4.3",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
